@@ -20,8 +20,8 @@ package WebInterface::Extension::PropertiesViewer;
 
 use strict;
 
-use WebInterface::Renderer;
-our @ISA = qw( WebInterface::Renderer );
+use WebInterface::View::sidebar::Renderer;
+our @ISA = qw( WebInterface::View::sidebar::Renderer);
 
 sub new {
         my $this = shift;
