@@ -6,6 +6,7 @@
      - fixed SMB secure flag related Zip download bug
      - fixed navigation while loading bug
      - added column setup suppport to the simple view
+     - fixed SysInfo and PropertiesViewer extension do not work bug 
 
 0.8.5: 2013/21/5
      - fixed text save bug 
